--- a/PartyHaanCloneApp/web/src/App.css
+++ b/PartyHaanCloneApp/web/src/App.css
@@ -1,8 +1,8 @@
 .App {
   text-align: center;
-  width: 400px;
+  max-width: 500px;
   margin: 0 auto;
-  padding-top: 10vh;
+  /* padding-top: 10vh; */
 }
 
 .App-logo {
